Karmello/puzzle-games#62: User model back to previous state
