# routes/users.js
@@ -2,7 +2,6 @@ const jwt = require('jsonwebtoken');
 
 const { User } = require('./../models');
 const checkAuthorization = require('./../middleware/checkAuthorization');
-const defaultUiState = require('./../db/data/uiState');
 
 
 module.exports = function(router) {
@@ -11,7 +10,6 @@ module.exports = function(router) {
     
     const user = new User(req.body);
     user.registeredAt = Date.now();
-    user.uiState = defaultUiState;
     
     user.save(err => {
       if (err) {
@@ -63,10 +61,29 @@ module.exports = function(router) {
     });
   });
 
+  router.post('/user/:username', checkAuthorization, (req, res) => {
+    const findQuery = { username: req.params.username };
+    User.update(findQuery, req.body).then(() => {
+      User.findOne(findQuery).then(user => {
+        if (user) {
+          res.send(user);
+        } else {
+          res.status(400);
+          res.send('No user object');
+        }
+      });
+    });
+  });
+
   router.get('/users', checkAuthorization, (req, res, next) => {
     User.find({}, (err, users) => {
       if (err) return next(err);
-      if (users) { res.send(users); }
+      if (users) {
+        res.send(users);
+      } else {
+        res.status(400);
+        res.send('No users array');
+      }
     });
   });
 }
